--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,34 @@
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-urbanist: 'Urbanist', sans-serif;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-urbanist);
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+@layer base {
+    :root {
+        --brand-pink: #f7d0e9;
+        --brand-blue: #4876ff;
+        --brand-navy: #2e3192;
+        --brand-verdigris: #00AFB9;
+        --brand-amber: #FFBE0B;
+        --brand-orange: #ff7347;
+        --brand-light-orange: #FFBE0B;
+        --brand-purple: #692e54;
+        --brand-gray: #F5F5F5;
+        --brand-medium-gray: #3a3c3d;
+        --brand-light-gray: #e8e7e7;
+    }
 }
