--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
-@tailwind base;
-@tailwind components;
+@plugin "@tailwindcss/typography";
+
+@tailwind/preflight;
 @tailwind utilities;
 
 :root {
@@ -20,15 +21,6 @@ body {
 @layer base {
     :root {
         --brand-pink: #f7d0e9;
-        --brand-blue: #4876ff;
-        --brand-navy: #2e3192;
-        --brand-verdigris: #00AFB9;
-        --brand-amber: #FFBE0B;
-        --brand-orange: #ff7347;
-        --brand-light-orange: #FFBE0B;
-        --brand-purple: #692e54;
-        --brand-gray: #F5F5F5;
-        --brand-medium-gray: #3a3c3d;
-        --brand-light-gray: #e8e7e7;
+        
     }
 }
