--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,12 @@ body {
         
     }
 }
+
+.background-gradient {
+  background: radial-gradient(
+    circle at top center,
+    hsla(222, 80%, 60%, 0.5) 0%,
+    hsla(222, 0%, 0%, 0) 50%,
+    hsla(222, 0%, 0%, 0) 100%
+  );
+}
